--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^2.8.1",
     "react-swipe": "^5.1.1",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "swipe-js-iso": "^2.0.4",
